# ptxdist

./: .config  .gitignore  .rtaiconfig  AUDIT  COMPILE-TEST  COPYING  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.BBU  Makefile.in  README  README.Toolchains  README.devel  REVISION_POLICY  SPECIFICATION  TODO  TOOLCHAINS  configure  configure.ac  fcgi.patch  tst
Documentation/: MIGRATION  NEWPACKETHOWTO  README  XORG-VERSIONS
Documentation/manual/: Makefile  PTXdist-Manual.tex
bootdisk/: part_table  part_table2  part_table_new
config/: Config.in  Kconfig  c3-abbcc.ptxconfig  flowscreen2.ptxconfig  geode-roi_eics.ptxconfig  get_tool_versions.config  h7202.ptxconfig  i386-frako.ptxconfig  i386-generic-glibc.ptxconfig  i386-generic-uclibc.ptxconfig  i386-ratio-uno-2053-1.ptxconfig  i386-rayonic.ptxconfig  i386-scII-bmwm.ptxconfig  i586-rayonic.ptxconfig  innokom-2.4-2.95.ptxconfig  innokom-2.4-3.3.2.ptxconfig  innokom-2.6-3.3.2.ptxconfig  mx1fs2.ptxconfig  pii_nge.ptxconfig  ppc405-cameron.ptxconfig  ptxconfig-auerswald-20021007-1  ptxconfig-auerswald-20021007-2  ptxconfig-auerswald-20021116-1  ptxconfig-auerswald-20021210-1  ptxconfig-auerswald-20030111-1  ptxconfig-auerswald-20030114-1  ptxconfig-auerswald-20030119-1  ptxconfig-auerswald-20030127-1  ptxconfig-auerswald-20030227-1  ptxconfig-auerswald-20030227-2  ptxconfig-auerswald-20030227-3  ptxconfig-auerswald-20030302-1  ptxconfig-auerswald-20030304-1  ptxconfig-auerswald-20030305-1  ptxconfig-auerswald-20030305-2  ptxconfig-auerswald-20030305-3  ptxconfig-auerswald-20030311-1  ptxconfig-auerswald-20030312-1  ptxconfig-auerswald-20030312-2  ptxconfig-auerswald-20030312-3  (+48 more)
config/boardsetup/: Kconfig
config/bootdisk/: bmwm  frako
config/busybox/: Config.in  Extract  Remove
config/busybox-1.0.0-pre5/: Extract
config/busybox-1.1.0/: Extract
config/busybox-1.1.3/: Config.in  Extract
config/busybox-1.4.1/: Config.in
config/busybox-1.4.2/: Config.in  Extract  Remove
config/cmake/: toolchain-host.cmake.in  toolchain-target.cmake.in  toolchain.cmake.in
config/collection/: Kconfig
config/hostapd/: defconfig
config/image_iso/: isolinux.cfg  message.txt
config/images/: barebox_partitions.config  boot-mlo-vfat.config  boot-vfat-efi-barebox.config  boot-vfat-mlo-barebox.config  boot-vfat-mlo-u-boot.config  cpio.config  ext.config  grub.config  grub_partitions.config  hd.config  rauc.config  squashfs.config  ubi.config  ubifs.config  vfat_partitions.config
config/initramfs-busybox/: Config.in
config/kernel/: BIG_FAT_WARNING  Extract  config-auerswald  config-ganymed  kernel-2.4.18-rayonic-20021003-1  kernel-2.4.18-rayonic-20021003-2  kernel-2.4.18-rayonic-20030424-0  kernel-2.4.19-auerswald-20021204-3  kernel-2.4.19-auerswald-20030301-1  kernel-2.4.19-auerswald-20030303-1  kernel-2.4.19-auerswald-20030625-1  kernel-2.4.19-auerswald-20030630-1  (+32 more)
debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  ptxdist-default.ex  ptxdist.doc-base.EX  ptxdist.substvars  rules  watch.ex
doc/: conf.py  conf.py.in  contributing.rst  daily_work.inc  daily_work.rst  daily_work_section.rst  dev_manual.rst  environment.rst  faq.inc  faq.rst  getting_help.rst  including_bsp_doc.inc  index.rst  macro_reference.rst  man.rst  multi_image_platforms.inc  nfsroot.inc  preamble.inc  ptxdist.man  ref_manual.rst  ref_parameter.inc  ref_parameter.rst  revisions.rst  thanks.rst  titlepage.inc  tox.ini  user_adapting.inc  user_images.inc  user_manual.inc  user_manual.rst  user_manual_section.rst  welcome.rst  working_with_git_sources.inc
generic/: httpd.conf
misc/: openssh-host-keygen.sh  ptx-init-permissions.sh
patches/: .gitignore  HEADER  TODO  autogen.sh  patches.lst
pending_patches/: crosstool-0.31.diff  deps.awk  deps.sh  diff-host-mtd  ptxdist-0.7.5-11072005-kub.diff
rules/: 00debug-packages.in  Definitions.make  Kconfig  Kconfig.in  LMbench3.in  NEWPACKET  NEWPACKET-XCHAIN  NEWPATCH  NEWPATCH-XCHAIN  Rules.in  Rules.make  Toplevel.make  Version.make  Virtual.make  acl.in  acl.make  acpid-bbinit.in  acpid.in  acpid.make  addons.make  alfred.in  alfred.make  alsa-lib.in  alsa-lib.make  alsa-utils-bbinit.in  alsa-utils.in  alsa-utils.make  apache.dep  apache.in  apache.make  apache2-bbinit.in  apache2.dep  apache2.in  apache2.make  apache2_mod_python.in  apache2_mod_python.make  apr-util.in  apr-util.make  apr.in  apr.make  (+3173 more)
rules/templates/src-autoconf-lib/: @name@.c  COPYING  HOWTO  Makefile.am  README  configure.ac  internal.h  lib@name@.h  lib@name@.pc.in  wizard.sh
rules/templates/src-autoconf-prog/: @name@.c  COPYING  Makefile.am  configure.ac  wizard.sh  wizzard.sh
rules/templates/src-autoconf-proglib/: @name@.c  COPYING  Makefile.am  configure.ac  lib@name@.c  lib@name@.h  wizard.sh  wizzard.sh
rules/templates/src-cmake-prog/: CMakeLists.txt  wizard.sh
rules/templates/src-stellaris/: @name@.c  Makefile.in  autogen.sh  configure.ac  link.ld  startup_gcc.c  wizard.sh
scripts/: apply_patch_series.sh  audit  autobuild-template  bash_completion  certdata2pem.py  changelog-authors.xml  changelog_from_svn  collect_sources.sh  compile-test  config  configure_helper.py  create_configdeps.sh  create_dependencies.sh  cuckoo-test  cvs2cl  dep_hunter.sh  dgen.sh  dummy-strip.sh  fix-permissions.sh  gen_packet_deps  genhdimg  get_tool_versions.sh  git-ptx-patches  install_copy_toolchain.sh  ipkg-check-equal  ipkg-push  ipkg-revision  ipkg-test  kdevelop_debug.sh  label_packets.awk  libptxdist.sh  license-yaml2csv.py  maintainance_probably_obsolete  maintenance  make_archive.sh  make_empty.sh  make_gprelease.sh  make_image_root.sh  make_image_tgz.sh  make_locale.sh  (+22 more)
tests/: boot  boot.kermit  connect  connect.kermit  cuckoo-test  flash  flash.kermit  kwrapper  libptxdisttest.kermit  libptxdisttest.sh  make_barebox_env  make_uboot_env  make_uboot_v2_env  setenv  setenv.kermit  setenv.test  setenv.u-boot-v1.kermit  setenv.u-boot-v2.kermit
(+5961 files in other folders)
